@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - diagnostic messages are fixed so they include the name of the sub
+            used, rather than always using "tuples"
 
 0.003     2013-05-20 23:06:32 PDT-0700 (Karen Etheridge)
           - properly handle testing of lists where tuple keys are repeated
